--- a/wedding.css
+++ b/wedding.css
@@ -17,6 +17,18 @@ header{
     align-items: center;
 }
 
+
+header.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 100;
+    padding: 10px 0;
+    background-color: #12121e; 
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
+}
+
 .logo{
     margin-top: 20px;
     width: 150px;
@@ -257,6 +269,9 @@ footer{
 
 @media screen and (max-width: 855px) {
     /* Add your responsive styles here for smaller screens */
+    .container{
+        height: 600px;
+    }
     h2{
         bottom: 200px;
     }
